scripts/tests/errors/err_unterminated_string.bu
// Test: unterminated string literal
// Expected: compile error

var x = "hello world
print(x)
